Fixed Extra Space between Question Text & Equation
Restructured the columns in a strange way in order to remove the extra
space between the question text and the equation. The two columns still
stack correctly on mobile screens even with this fix which is excellent.

--- a/Math Learning Game Web Application/css/style.css
+++ b/Math Learning Game Web Application/css/style.css
@@ -3,33 +3,9 @@ html, body {
 }
 body {
 	font-family: normal 16px/1.5 "Asap", arial, sans-serif;
-<<<<<<< HEAD
 	background-image: url('../assets/images/wood-desktop-bg.jpg');
 	background-size: cover  
 }
-=======
-	/*
-	font-family: 'Cedarville Cursive', cursive;
-    font-family: 'Butterfly Kids', cursive;
-    font-family: 'Asap', sans-serif;
-	font-size: 18px;
-	*/
-   /* Gradient BG */
-	background-image: url('../assets/images/wood-desktop-bg.jpg');
-	background-size: cover;/* Nice Sky Blue Gradient BG 
-   
-   background: -webkit-linear-gradient(top, rgb(136,199,201) 58%, rgb(202,232,235) 100%);
-
-   background: -moz-linear-gradient(top, rgb(136,199,201) 58%, rgb(202,232,235) 100%);
-
-   background: -ms-linear-gradient(top, rgb(136,199,201) 58%, rgb(202,232,235) 100%);
-
-   background: -o-linear-gradient(top, rgb(136,199,201) 58%, rgb(202,232,235) 100%);
-
-   background: linear-gradient(top, rgb(136,199,201) 58%, rgb(202,232,235) 100%);
-
-   padding: 3%;
->>>>>>> origin/master
 
 /* CSS for columns without gutters or space in between */
 .row.no-gutter {
@@ -42,6 +18,7 @@ body {
   padding-right: 0;
   padding-left: 0;
 }
+
 .nbLineText {
 	font-family: 'Asap', cursive;
 }
@@ -49,15 +26,8 @@ body {
 	font-family: 'Caveat', cursive; /* Annie Use Your Telescope */
 	font-size: 1.8em;
 	/* Default line-height is 20px */
-<<<<<<< HEAD
  	 /*width: 50%;
   	height: 80%; */
-=======
-  /*width: 50%;
-
-  height: 80%; */
-
->>>>>>> origin/master
 	margin: 0 auto;
 	padding: 6px 5px 4px 42px;
 	position: relative;
@@ -99,15 +69,8 @@ body {
 	font-family: 'Caveat', cursive; /* Annie Use Your Telescope */
 	font-size: 1.8em;
 	/* Default line-height is 20px */
-<<<<<<< HEAD
   	/*width: 50%;
   	height: 80%; */
-=======
-  /*width: 50%;
-
-  height: 80%; */
-
->>>>>>> origin/master
 	margin: 0 auto;
 	padding: 6px 5px 4px 42px;
 	position: relative;
@@ -230,11 +193,7 @@ input[type="radio"]:checked + label span {
 	background-repeat: no-repeat;
 }
 #multiplication-Button {
-<<<<<<< HEAD
 	background: url('../assets/images/Scribble-Button-Purple.png');
-=======
-	background: url('../assets/images/Scribble-Button-purple.png');
->>>>>>> origin/master
 	background-size: 100%;
 	background-repeat: no-repeat;
 }
@@ -244,11 +203,7 @@ input[type="radio"]:checked + label span {
 	background-repeat: no-repeat;
 }
 #submitAnswer-Button {
-<<<<<<< HEAD
 	background: url('../assets/images/Scribble-Button-Purple.png');
-=======
-	background: url('../assets/images/Scribble-Button-purple.png');
->>>>>>> origin/master
 	background-size: 100%;
 	background-repeat: no-repeat;
 }
@@ -284,7 +239,6 @@ input[type="radio"]:checked + label span {
 .questionGeneratedRow {
 	font-size: 2em;
 }
-<<<<<<< HEAD
 
 @media only screen and (max-width: 991px) {
 	.questionGeneratedRow {
@@ -293,8 +247,6 @@ input[type="radio"]:checked + label span {
 
 }
 
-=======
->>>>>>> origin/master
 #generatedQuestion {
 	height: 25px; /*24.8px */
 	padding: 10px;
@@ -325,11 +277,7 @@ input[type="radio"]:checked + label span {
 	background-repeat: no-repeat;
 }
 #menu-footer {
-<<<<<<< HEAD
 	margin-top: 20px;
-=======
-	margin-top: 120px;
->>>>>>> origin/master
 }
 #highscore-Button {
 	background-image: url('../assets/images/Scribble-Button-Orange.png');
@@ -385,6 +333,7 @@ hr.dottedScissorsLine:after {
 }
 #levelError {
 }
+
 #nameInput-errorMessage {
 	display: none;
 	color: white;
@@ -408,15 +357,9 @@ hr.dottedScissorsLine:after {
 	/*display: inline-block; */
 	border: 0;
 	width: 180px;
-<<<<<<< HEAD
 	height: 100%;
 	background-image: url('../assets/images/Scribble-Button-Red.png');
 	background-size: cover;
-=======
-	height: 77px;
-	background-image: url('../assets/images/Scribble-Button-Red.png');
-	background-size: 100%;
->>>>>>> origin/master
 	background-repeat: no-repeat;
 	padding-top: 5px;
 }
@@ -432,11 +375,8 @@ hr.dottedScissorsLine:after {
 }
 /* -------------- modal box css ------------------*/
 .modalDialog {
-<<<<<<< HEAD
-	overflow: scroll;
+	overflow-y: scroll;
 	padding: 15px;
-=======
->>>>>>> origin/master
 	position: fixed;
 	font-family: Arial, Helvetica, sans-serif;
 	top: 0;
@@ -492,19 +432,8 @@ hr.dottedScissorsLine:after {
 	-moz-box-shadow: 0 1px 2px rgba(0,0,0,0.07);
 	box-shadow: 0 1px 2px rgba(0,0,0,0.07);
 	max-width: 816px;
-<<<<<<< HEAD
 }
 
-=======
-	height: 500px; /*1056 px*/
-}
-#pop-up-main {
-	height: 850px;
-	text-align: center;
-	font-size: 40px;
-	margin: 50px auto;
-}
->>>>>>> origin/master
 #pop-up {
 	text-align: center;
 	font-size: 37px;
@@ -512,6 +441,79 @@ hr.dottedScissorsLine:after {
 .modalDialog > div > h1 {
 	font-size: 90px;
 }
+
+@media only screen and (min-width: 332px) and (max-width: 408px) {
+
+	.userResultTable {
+		font-size: 0.8em;
+	}
+
+}
+
+@media only screen and (max-width: 331px) {
+
+	.userResultTable {
+		font-size: 0.7em;
+	}
+
+}
+
+.highScores-Table {
+	font-size: 1.65em;
+}
+
+.highScores-Table th,
+.highScores-Table td {
+	padding: 0 5px;
+}
+
+.modalDialog h1 {
+	font-size: 3em;
+}
+
+@media only screen and (min-width: 374px) and (max-width: 600px) {
+	.highScores-Table {
+		font-size: 1.2em;
+	}
+
+	.modalDialog h1 {
+		font-size: 2.5em;
+	}
+}
+
+
+@media only screen and (min-width: 349px) and (max-width: 373px) {
+	.highScores-Table {
+		font-size: 0.95em;
+	}
+
+	.modalDialog h1 {
+		font-size: 2.2em;
+	}
+}
+
+@media only screen and (min-width: 333px) and (max-width: 348px) {
+	.highScores-Table {
+		font-size: 0.89em;
+	}
+
+	.modalDialog h1 {
+		font-size: 2em;
+	}
+}
+
+@media only screen and (max-width: 332px) {
+	.highScores-Table {
+		font-size: 0.84em;
+	}
+
+	.modalDialog h1 {
+		font-size: 1.9em;
+	}
+}
+
+
+
 table {
     border-collapse: collapse;
 	alignment-adjust: middle;
@@ -529,14 +531,5 @@ table, th, td {
     border: 3px solid black;
 }
 #pop-up-buttons {
-<<<<<<< HEAD
 	padding-top: 5px;
-=======
-	padding-top: 30px;
-}
-#pop-up-button-spacer {
-	display: inline-block;
-	margin-left: 30px;
-	margin-right: 30px;
->>>>>>> origin/master
 }
